[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Entities/Parts/Laser/BasicLaser.gd" type="Script" id=1]
[ext_resource path="res://scenes/Entities/Parts/Laser/LaserCannon.png" type="Texture" id=2]

[node name="BasicLaser" type="Node2D"]
script = ExtResource( 1 )

[node name="ShotDurationTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="LaserNoise" type="AudioStreamPlayer2D" parent="."]

[node name="Line2D" type="Line2D" parent="."]

[node name="LaserCannon" type="Sprite" parent="."]
texture = ExtResource( 2 )

[connection signal="timeout" from="ShotDurationTimer" to="." method="_on_ShotDurationTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
